--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
   <script src="https://cdn.tiny.cloud/1/doicvbneaya0gerwmrc6gn0ei4uw3vsk4znmslowgfwri44v/tinymce/5/tinymce.min.js"
     referrerpolicy="origin"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+
   <script>
     tinymce.init({
       selector: 'textarea',
@@ -62,6 +65,7 @@
           <li><a class="nav-link scrollto" href="#streamers">Streamers</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#clients">Games</a></li>
+          <li><a class="nav-link scrollto" href="#partners">Partners</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li>
             <a class="getstarted scrollto" href="#services">Get Started</a>
@@ -121,7 +125,7 @@
                   src="https://static-cdn.jtvnw.net/jtv_user_pictures/enigmagamesinc-profile_image-6e13de0cbab10c1c-150x150.png"
                   class="testimonial-img" alt="">
                 <h3>EnigmaGamesInc</h3>
-                <h4>13 NFTs</h4>
+                <h4>0 NFTs</h4>
 
               </div>
               <p>
@@ -138,7 +142,7 @@
                   src="https://static-cdn.jtvnw.net/jtv_user_pictures/eebbe7fc-7859-4917-825b-34e2e63ded6d-profile_image-150x150.png"
                   class="testimonial-img" alt="">
                 <h3>DenkOps</h3>
-                <h4>2 NFTs</h4>
+                <h4>0 NFTs</h4>
 
               </div>
               <p>
@@ -155,7 +159,75 @@
                   src="https://static-cdn.jtvnw.net/jtv_user_pictures/293af7b9-814a-4b46-ae97-d55879f2e6a4-profile_image-150x150.png"
                   class="testimonial-img" alt="">
                 <h3>Ziggy</h3>
-                <h4>3 NFTs</h4>
+                <h4>0 NFTs</h4>
+
+              </div>
+              <p>
+                <button type="submit">Visit Channel</button>
+              </p>
+
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="profile mt-auto">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/982ac00b-03ff-4879-a037-4e0aa5ad2183-profile_image-150x150.png"
+                  class="testimonial-img" alt="">
+                <h3>Crunk_Muffin</h3>
+                <h4>0 NFTs</h4>
+
+              </div>
+              <p>
+                <button type="submit">Visit Channel</button>
+              </p>
+
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="profile mt-auto">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/2621b461703eb33d-profile_image-150x150.jpeg"
+                  class="testimonial-img" alt="">
+                <h3>JustinLCarter</h3>
+                <h4>0 NFTs</h4>
+
+              </div>
+              <p>
+                <button type="submit">Visit Channel</button>
+              </p>
+
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="profile mt-auto">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/8a76516a-368f-4da0-8cf5-8e2e9a3689f7-profile_image-150x150.png"
+                  class="testimonial-img" alt="">
+                <h3>MiraScarlet</h3>
+                <h4>0 NFTs</h4>
+
+              </div>
+              <p>
+                <button type="submit">Visit Channel</button>
+              </p>
+
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="profile mt-auto">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/bc95bb2e-456d-4353-a413-9248f4b22a33-profile_image-150x150.png"
+                  class="testimonial-img" alt="">
+                <h3>TheNoosh22</h3>
+                <h4>0 NFTs</h4>
 
               </div>
               <p>
@@ -328,6 +400,38 @@
             </div>
             <div class="swiper-slide">
               <img src="assets/img/clients/enigma-k9.png" class="img-fluid" alt="K9 Empire" />
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+    <!-- End Clients Section -->
+
+    <!-- ======= Partners Section ======= -->
+    <section id="partners" class="clients">
+      <div class="container" data-aos="fade-up">
+        <header class="section-header">
+          <h2>Our Technology Partners</h2>
+          <p>Leveraging the latest technology to create a platform for NFTs</p>
+        </header>
+
+        <div class="clients-slider swiper-container">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="assets/img/partners/enjin.png" class="img-fluid" alt="Enjin" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/moralis.png" class="img-fluid" alt="Moralis" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/twitch.png" class="img-fluid" alt="Twitch" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/aws.png" class="img-fluid" alt="Amazon Web Services" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/velas.png" class="img-fluid" alt="Velas" />
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -1826,6 +1930,23 @@
     var TIERS = { 99: 'tier1', 199: 'tier2', 299: 'tier3', 399: 'tier4', 499: 'tier5', 599: 'tier6', 699: 'tier7', 799: 'tier8', 899: 'tier9', 999: 'tier10'};
     var PRICES = { tier1: 99, tier2: 199, tier3: 299, tier4: 399, tier5: 499, tier6: 599, tier7: 699, tier8: 799, tier9: 899, tier10: 999 };
 
+
+
+          async function f1() {
+            try {
+            const serverUrl = "https://mdpsykxctp2q.usemoralis.com:2053/server";
+const appId = "pvhbtIHRFx1uCvBPgvv60fVnYVFBVriAZR3bdx9B";
+Moralis.start({ serverUrl, appId });
+const options = { chain: "eth", address: "0x000000000000000000000000ef599ec4e1510b22" };
+    const tokenMetadata = await Moralis.Web3API.account.getNFTs(options).then(function (details) {
+      console.log(details)
+          }).catch((err) => { console.error(err); });
+        } catch(err) {
+    alert(err); // TypeError: failed to fetch
+  }
+}
+
+//f1();
 
     function hideSections() {
       $("section").hide();
