--- a/index.html
+++ b/index.html
@@ -433,6 +433,9 @@
             <div class="swiper-slide">
               <img src="assets/img/partners/velas.png" class="img-fluid" alt="Velas" />
             </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/heco.jpeg" class="img-fluid" alt="HECO" />
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
