--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/values-2.png" class="img-fluid" alt="" />
+          <img src="assets/img/cover.png" class="img-fluid" alt="" />
         </div>
       </div>
     </div>
