--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#clients">Games</a></li>
           <li><a class="nav-link scrollto" href="#partners">Partners</a></li>
+          <li><a class="nav-link" href="/roadmap/">Roadmap</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li>
             <a class="getstarted scrollto" href="#services">Get Started</a>
