--- a/index.html
+++ b/index.html
@@ -437,6 +437,9 @@
             <div class="swiper-slide">
               <img src="assets/img/partners/heco.jpeg" class="img-fluid" alt="HECO" />
             </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/coinpayments.png" class="img-fluid" alt="CoinPayments" />
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -1100,18 +1103,21 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="index.html" class="logo align-items-center">
               <img src="assets/img/logo.png" alt="PlayNFT" />
             </a>
+            <a href="PlayNFT_Pitchdeck.pdf" target="_blank" class="align-items-center">
+              <b>Pitch Deck <i class="fas fa-file-download"></i></b>
+            </a>
+            
             <p>
               We are building an ecosystem to extend the utility and value of
               NFTs.
             </p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin bx bxl-linkedin"></i></a>
+              <a href="https://twitter.com/playnft_io" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/PlayNFT.io" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.linkedin.com/company/playnftio" class="linkedin"><i class="bi bi-linkedin bx bxl-linkedin"></i></a>
             </div>
           </div>
 
