--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -68,7 +68,7 @@
         </div>
     </header>
     <!-- End Header -->
-
+    <div class="row spacer">&nbsp;</div>
     <main id="main">
         <!-- ======= Streamers Section ======= -->
         <section id="section-streamers" class="gamers">
@@ -77,7 +77,7 @@
                     <h2>Playground Plans</h2>
                     <p>Roadmap</p>
                 </header>
-                <img src="../assets/img/roadmap.png">
+                <img class="img-fluid" src="../assets/img/roadmap.png">
             </div>
         </section>
         <!-- ======= End Streamers Section ======= -->
