--- a/twitch/index.html
+++ b/twitch/index.html
@@ -335,7 +335,7 @@
 
     $(document).on("click", "#login-twitch", function () {
         let clientID = "bugcm9v8dm9e2d4wp7u9l3hsnd5plo"
-        let redirectSite = location.protocol + "//" + location.host + "/twitch.html"
+        let redirectSite = location.protocol + "//" + location.host + "/twitch"
         let state = window.btoa(encodeURIComponent(escape(new Date().toDateString())));
 
 
