--- a/twitch/index.html
+++ b/twitch/index.html
@@ -74,7 +74,7 @@
         <section id="section-streamers" class="gamers">
             <div class="container">
                 <header class="section-header">
-                    <h2>Twitch NFTs</h2>
+                    <h2>Twitch Tokens</h2>
                     <p>Claim your NFTs</p>
                 </header>
 
@@ -174,14 +174,13 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="list-streamers-review" role="tabpanel"
-                                aria-labelledby="nav-streamers-review">
+                            <div class="tab-pane fade" id="list-twitch-review" role="tabpanel"
+                                aria-labelledby="nav-twitch-review">
                                 <div class="col-md-12">
-                                    <div class="panel panel-primary" id="streamers-review-panel">
+                                    <div class="panel panel-primary" id="twitch-review-panel">
                                         <div class="panel-heading">
-                                            <h4>Twitch Extension Integration</h4>
-                                            <p class="section-header">Install the PlayNFT Extension and create a new
-                                                Panel to start distributing your tokens.</p>
+                                            <h4>Blockchain Confirmation</h4>
+                                            <p class="section-header"></p>
                                         </div>
                                         <div class="panel-body">
                                             <div class="flex-shrink-0 text-center">
@@ -240,7 +239,7 @@
           <div class="flex-grow-1 ms-3">
             <strong>${name}</strong>
             <p>Streamer: ${streamer}<br/>
-            Date Purchased: ${date}</p>
+            Date Acquired: ${date}</p>
             <div class="actions">
               
               <a href="#" id="twitch-nfts-select" class="btn-details-select" data-id="${transactionId}" data-streamerid="${streamerId}" >Claim</a>
