--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-  <title>PlayNFT - The Playground for your NFTs</title>
+  <title>PlayNFT - The Cross-chain NFT Utility Platform</title>
   <meta content="" name="description" />
 
   <meta content="nft" name="keywords" />
