--- a/index.html
+++ b/index.html
@@ -449,6 +449,9 @@
             <div class="swiper-slide">
               <img src="assets/img/partners/coinpayments.png" class="img-fluid" alt="CoinPayments" />
             </div>
+            <div class="swiper-slide">
+              <img src="assets/img/partners/covalent.png" class="img-fluid" alt="Covalent" />
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
