Added Polygon to supported list

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                 <img style="width:50px" src="assets/img/enjin-coin-enj-logo.svg" alt="Enjin" />
                 <img style="width:50px" src="assets/img/avalanche-avax-logo.svg" alt="Avalanche" />
                 <img style="width:50px" src="assets/img/heco-logo.svg" alt="Heco" />
+                <img style="width:50px" src="assets/img/polygon-matic-logo.svg" alt="Polygon" />
               </p>
               <div class="text-center text-lg-start">
                 <a href="#"
